--- a/src/shared/Navbar/Navbar.module.css
+++ b/src/shared/Navbar/Navbar.module.css
@@ -1,10 +1,12 @@
 .navbar {
+  width: 100%;
+  height: 65px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 15px 30px;
-  background-color: #e3fff1;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  background-color: #00984c;
+  box-shadow: 0 2px 8px rgba(1, 43, 15, 0.516);
 }
 
 .navbarStart img {
@@ -24,7 +26,7 @@
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
-  color: #2e5f45;
+  color: #000000;
   padding: 6px 10px;
   transition: color 0.3s;
 }
@@ -43,7 +45,7 @@
 }
 
 .link:hover {
-  color: #1f7a54;
+  color: #000604;
 }
 
 .link:hover::after {
@@ -51,7 +53,7 @@
 }
 
 .active {
-  color: #184b00;
+  color: #030a00;
   font-weight: 600;
 }
 
@@ -71,5 +73,5 @@
 }
 
 .navbarEnd i:hover {
-  color: #1f7a54;
+  color: #000000;
 }
