css design added

--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -1,17 +1,41 @@
+.formContainer {
+  width: 100%;
+  min-height: 120vh;
+  background: linear-gradient(to bottom, rgb(9, 19, 0), rgb(3, 75, 3));
+  padding-left: 150px;
+  position: relative;
+  font-family: "Comfortaa", cursive;
+}
 .form {
   max-width: 400px;
-  margin: 30px auto;
   padding: 30px;
   border-radius: 20px;
   background: #f6fff7;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-  font-family: "Segoe UI", sans-serif;
+  position: absolute;
+  top: 70px;
+  animation: slideUp 0.5s ease-in-out;
+}
+
+@keyframes slideUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+h2 {
+  font-family: "Comfortaa", cursive;
 }
 
 .input {
   width: 100%;
   padding: 12px 15px;
-  margin: 10px 0;
+  margin: 5px 0;
   border: 2px solid #cce3cc;
   border-radius: 10px;
   background-color: #fff;
@@ -45,17 +69,13 @@
 .error {
   color: #d9534f;
   font-size: 14px;
-  margin: -5px 0 10px 5px;
+  margin: -1px 0 10px 3px;
 }
 
-@media (max-width: 480px) {
-  .form {
-    padding: 20px;
-  }
-
-  .input,
-  .button {
-    font-size: 14px;
-    padding: 10px;
-  }
+.image {
+  width: 900px;
+  height: 500px;
+  position: absolute;
+  bottom: 160px;
+  right: 0px;
 }
