--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -2,19 +2,22 @@
   width: 100%;
   min-height: 120vh;
   background: linear-gradient(to bottom, rgb(9, 19, 0), rgb(3, 75, 3));
-  padding-left: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  font-family: "Comfortaa", cursive;
 }
+
 .form {
-  max-width: 400px;
+  width: 450px;
   padding: 30px;
   border-radius: 20px;
   background: #f6fff7;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   position: absolute;
-  top: 70px;
+  top: 50px;
   animation: slideUp 0.5s ease-in-out;
+  z-index: 99999999;
 }
 
 @keyframes slideUp {
@@ -29,12 +32,13 @@
 }
 
 h2 {
+  margin-top: -10px;
   font-family: "Comfortaa", cursive;
 }
 
 .input {
   width: 100%;
-  padding: 12px 15px;
+  padding: 10px 13px;
   margin: 5px 0;
   border: 2px solid #cce3cc;
   border-radius: 10px;
@@ -52,7 +56,8 @@ h2 {
 .button {
   width: 100%;
   padding: 12px;
-  margin-top: 15px;
+  margin-top: 10px;
+
   background-color: #7abf7a;
   color: white;
   font-weight: bold;
@@ -69,13 +74,5 @@ h2 {
 .error {
   color: #d9534f;
   font-size: 14px;
-  margin: -1px 0 10px 3px;
-}
-
-.image {
-  width: 900px;
-  height: 500px;
-  position: absolute;
-  bottom: 160px;
-  right: 0px;
+  margin: -1px 0 6px 3px;
 }
