--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -2,13 +2,15 @@
   width: 100%;
   height: 120vh;
   background: linear-gradient(to bottom, rgb(9, 19, 0), rgb(3, 75, 3));
-  padding-left: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 
 .form {
-  max-width: 400px;
-  width: 90%;
+  width: 450px;
+  height: auto;
   padding: 30px;
   border-radius: 20px;
   background: #f6fff7;
@@ -80,13 +82,3 @@ h2 {
   font-size: 14px;
   margin: -1px 0 10px 3px;
 }
-
-
-.image {
-  width: 900px;
-  height: 500px;
-  position: absolute;
-  bottom: 160px;
-  right: 0px;
-}
-
