--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -18,7 +18,7 @@
   position: absolute;
   top: 70px;
   animation: slideUp 0.5s ease-in-out;
-  z-index: 999999999999999;
+  z-index: 99;
 }
 
 h2 {
