--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -17,7 +17,7 @@
   position: absolute;
   top: 50px;
   animation: slideUp 0.5s ease-in-out;
-  z-index: 99999999;
+  z-index: 99;
 }
 
 @keyframes slideUp {
