--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,5 +1,5 @@
 .dashboardContainer {
-  padding: 1.5rem;
+  padding: 2rem;
   background: #f8f9fa;
   min-height: 100vh;
   background: linear-gradient(to bottom, rgb(9, 19, 0), rgb(3, 75, 3));
@@ -9,6 +9,7 @@
   text-align: center;
   font-size: 32px;
   color: #d8d8d8;
+  padding-top: 40px;
   margin-bottom: 2rem;
 }
 
